# pytorch_template

./: .coverage  .coverage.yiskw.local.42875.936016  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  FOR_AOLAB_MEMBERS.md  LICENSE  README.md  docker-compose.yaml  eval.py  evaluate.py  experiment.sh  pyproject.toml  requirements.txt  run.sh  test.py  train.py
.github/workflows/: mypy_pytest.yaml  pytest_mypy.yaml
csv/: test.csv  train.csv  val.csv
dataset/: README.md
dockerfiles/: Dockerfile  Dockerfile.poetry
docs/: FOR_AOLAB_MEMBERS.md
libs/: checkpoint.py  class_label_map.py  class_weight.py  config.py  dataset.py  helper.py  mean.py  meter.py  metric.py  transformer.py
libs/loss_fn/: myloss.py
libs/models/: mymodel.py
notebook/: template.ipynb
notebooks/: stats.ipynb
pytorch_template/: config.py  helper.py
pytorch_template/datasets/: dataset.py  dataset_csv.py  factory.py  transform.py
pytorch_template/loss_fn/: __init__.py  class_weight.py  factory.py
pytorch_template/models/: __init__.py  factory.py
pytorch_template/optimizers/: factory.py
pytorch_template/utils/: checkpoint.py  device.py  factory.py  logger.py  meter.py  seed.py
result/cfg1/: config.yaml
result/cfg2/: config.yaml
result/model-resnet18_learning_rate-0.0003/: config.yaml
result/model-resnet18_learning_rate-0.003/: config.yaml
result/model-resnet34_learning_rate-0.0003/: config.yaml
result/model-resnet34_learning_rate-0.003/: config.yaml
result/model-resnet50_learning_rate-0.0003/: config.yaml
result/r18_lr0.0005/: config.yaml  log.csv  (+4 more)
scripts/: build_docker.sh  experiment.sh  run_docker.sh  run_docker_and_do_exps.sh
src/: evaluate.py  train.py
tests/: test_checkpoint.py  test_class_label_map.py  test_class_weight.py  test_config.py  test_dataset.py  test_device.py  test_helper.py  test_logger.py  test_loss_fn.py  test_mean_std.py  test_meter.py  test_metric.py  test_models.py  test_seed.py
tools/: train.py
utils/: build_dataset.py  make_configs.py  make_csv_files.py
(+52 files in other folders)
