[tool.poetry]
authors = ["yiskw713 <i.yuchi713@gmail.com>"]
description = "pytorch implementation template"
license = "MIT"
name = "pytorch_template"
version = "0.1.0"

[tool.poetry.dependencies]
PyYAML = "^5.3.1"
numpy = "^1.19.4"
pandas = "^1.1.4"
python = "^3.8"
scikit-learn = "^0.23.2"
torch = "^1.7.0"
torchvision = "^0.8.1"
wandb = "^0.10.12"
Pillow = "^8.0.1"
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
